# chat-app-python

./: .gitignore  main.py  pyproject.toml  requirements.txt
static/: 404.html  register.html
